@@ -1,3 +1,8 @@
+2012-03-30  Mark Wielaard  <mjw@redhat.com>
+
+	* strip.c (handle_elf): Use ebl_reloc_simple_types instead of
+	removed ebl_reloc_simple_type.
+
 2012-03-28  Mark Wielaard  <mjw@redhat.com>
 
 	* readelf.c (print_debug_abbrev_section): Check there is Dwarf
